--- a/Aier360/Controllers/校园/我的ic卡+打卡记录/ICCard.storyboard
+++ b/Aier360/Controllers/校园/我的ic卡+打卡记录/ICCard.storyboard
@@ -100,6 +100,7 @@
                         <segue destination="SS1-kk-Uk9" kind="show" identifier="my" id="zMt-zo-ETe"/>
                         <segue destination="shn-8k-54I" kind="show" identifier="teachers" id="L8r-P1-wpF"/>
                         <segue destination="Mgd-ZQ-eDN" kind="show" identifier="class" id="i86-7x-nzb"/>
+                        <segue destination="emo-yu-KDH" kind="show" identifier="myclass" id="bdB-uv-tSQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YGh-JZ-YTV" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -373,6 +374,69 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pDF-ou-kzK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1490" y="1791"/>
+        </scene>
+        <!--My Class History View Controller-->
+        <scene sceneID="WYZ-17-abz">
+            <objects>
+                <viewController storyboardIdentifier="ZXMyClassHistoryViewController" id="emo-yu-KDH" customClass="ZXMyClassHistoryViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ScF-cj-dZU"/>
+                        <viewControllerLayoutGuide type="bottom" id="KHi-1D-krU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rX2-a6-JKw">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="N7F-IE-r3R">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" textLabel="S8h-Ns-Mcd" detailTextLabel="Qpz-9L-lG0" style="IBUITableViewCellStyleValue1" id="O2L-qh-eGq">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="O2L-qh-eGq" id="fgX-iF-NnT">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="S8h-Ns-Mcd">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Qpz-9L-lG0">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="vFA-YH-yOP" kind="show" id="NJK-Fw-x24"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="emo-yu-KDH" id="vKH-0e-tSf"/>
+                                    <outlet property="delegate" destination="emo-yu-KDH" id="3aQ-Pc-2DL"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="N7F-IE-r3R" secondAttribute="trailing" constant="-16" id="VQW-ch-hmt"/>
+                            <constraint firstItem="N7F-IE-r3R" firstAttribute="top" secondItem="rX2-a6-JKw" secondAttribute="topMargin" id="b9l-TL-PWb"/>
+                            <constraint firstItem="KHi-1D-krU" firstAttribute="top" secondItem="N7F-IE-r3R" secondAttribute="bottom" id="tnd-Wy-Q40"/>
+                            <constraint firstItem="N7F-IE-r3R" firstAttribute="leading" secondItem="rX2-a6-JKw" secondAttribute="leadingMargin" constant="-16" id="wvn-36-eYD"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="N7F-IE-r3R" id="scr-i5-Z8T"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XG0-sF-Yae" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1490" y="2462"/>
         </scene>
         <!--Day History View Controller-->
         <scene sceneID="NMh-rT-MdO">
@@ -911,6 +975,6 @@
         <image name="no_history_tip" width="56" height="81"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Zrh-ex-21q"/>
+        <segue reference="NJK-Fw-x24"/>
     </inferredMetricsTieBreakers>
 </document>
