--- a/Aier360/Controllers/校园/我的ic卡+打卡记录/ICCard.storyboard
+++ b/Aier360/Controllers/校园/我的ic卡+打卡记录/ICCard.storyboard
@@ -804,6 +804,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jcN-NM-S1i">
+                                <rect key="frame" x="215" y="225" width="170" height="150"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_history_tip" translatesAutoresizingMaskIntoConstraints="NO" id="lw4-A0-Sq5">
+                                        <rect key="frame" x="57" y="20" width="56" height="81"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="81" id="hRS-s5-seb"/>
+                                            <constraint firstAttribute="width" constant="56" id="kMM-02-jnR"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="没有打卡记录哦~" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2N-0L-3BF">
+                                        <rect key="frame" x="20" y="109" width="130" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="130" id="G7d-DY-HN4"/>
+                                            <constraint firstAttribute="height" constant="21" id="QVV-9d-HKq"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.12549019610000001" green="0.76862745099999996" blue="0.54117647059999996" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="u2N-0L-3BF" firstAttribute="leading" secondItem="jcN-NM-S1i" secondAttribute="leading" constant="20" id="Lml-dr-HMh"/>
+                                    <constraint firstAttribute="bottom" secondItem="u2N-0L-3BF" secondAttribute="bottom" constant="20" id="fso-Oa-MCP"/>
+                                    <constraint firstItem="lw4-A0-Sq5" firstAttribute="leading" secondItem="jcN-NM-S1i" secondAttribute="leading" constant="57" id="lik-Du-rdV"/>
+                                    <constraint firstItem="lw4-A0-Sq5" firstAttribute="top" secondItem="jcN-NM-S1i" secondAttribute="top" constant="20" id="mwk-R0-qlF"/>
+                                    <constraint firstAttribute="width" constant="170" id="o2b-Fe-SgE"/>
+                                    <constraint firstAttribute="height" constant="150" id="vVM-N7-dAq"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tEk-qq-HgQ">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <subviews>
@@ -818,6 +849,9 @@
                                             <color key="titleColor" red="0.31764705879999999" green="0.31764705879999999" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="showBabyPicker:" destination="Js8-w7-f6B" eventType="touchUpInside" id="G73-rN-BcD"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.96470588235294119" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
@@ -896,20 +930,50 @@
                                     <outlet property="delegate" destination="Js8-w7-f6B" id="PmR-SY-jiQ"/>
                                 </connections>
                             </tableView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="H2V-wv-tpN">
+                                <rect key="frame" x="0.0" y="-300" width="600" height="300"/>
+                                <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="VGS-8E-cQw"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="babycell" id="UQv-V0-VVX">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UQv-V0-VVX" id="76z-uv-Xw4">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Js8-w7-f6B" id="ETC-bI-VQW"/>
+                                    <outlet property="delegate" destination="Js8-w7-f6B" id="yJQ-7U-M0R"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="centerX" secondItem="jcN-NM-S1i" secondAttribute="centerX" id="5er-cm-hpX"/>
                             <constraint firstItem="Cap-ag-aZN" firstAttribute="top" secondItem="fRB-0b-IYd" secondAttribute="bottom" id="B9y-C7-m92"/>
+                            <constraint firstAttribute="centerY" secondItem="jcN-NM-S1i" secondAttribute="centerY" id="DvH-My-GCI"/>
                             <constraint firstAttribute="trailingMargin" secondItem="fRB-0b-IYd" secondAttribute="trailing" constant="-16" id="Gof-ui-cCc"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="H2V-wv-tpN" secondAttribute="trailing" constant="-16" id="Hgo-5i-9cu"/>
                             <constraint firstAttribute="trailingMargin" secondItem="tEk-qq-HgQ" secondAttribute="trailing" constant="-16" id="Nzq-pl-lbS"/>
                             <constraint firstItem="tEk-qq-HgQ" firstAttribute="leading" secondItem="J6K-VU-GxE" secondAttribute="leadingMargin" constant="-16" id="c3f-SV-95d"/>
                             <constraint firstItem="fRB-0b-IYd" firstAttribute="top" secondItem="tEk-qq-HgQ" secondAttribute="bottom" id="gNi-aI-PiC"/>
+                            <constraint firstItem="H2V-wv-tpN" firstAttribute="leading" secondItem="J6K-VU-GxE" secondAttribute="leadingMargin" constant="-16" id="h5g-qT-gMV"/>
                             <constraint firstItem="tEk-qq-HgQ" firstAttribute="top" secondItem="J6K-VU-GxE" secondAttribute="topMargin" id="pbG-8Z-ixV"/>
+                            <constraint firstItem="tEk-qq-HgQ" firstAttribute="top" secondItem="H2V-wv-tpN" secondAttribute="bottom" id="sO0-4d-xws"/>
                             <constraint firstItem="fRB-0b-IYd" firstAttribute="leading" secondItem="J6K-VU-GxE" secondAttribute="leadingMargin" constant="-16" id="uTF-sK-4Fe"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="babyButton" destination="m4n-5h-jFX" id="W1L-Ws-Gcb"/>
+                        <outlet property="babyTableView" destination="H2V-wv-tpN" id="Xzz-AH-tPF"/>
                         <outlet property="tableView" destination="fRB-0b-IYd" id="fZd-cZ-Mgp"/>
+                        <outlet property="tipView" destination="jcN-NM-S1i" id="JDX-VT-R86"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="etW-cJ-bAd" userLabel="First Responder" sceneMemberID="firstResponder"/>
